# penitapena

./: configure.ac  doxy.conf  skin.py
data/: Makefile.am  menu.xml
data/lcd_skin220/: Makefile.am
data/lcd_skin400/: Makefile.am
lib/python/Components/: About.py  SystemInfo.py
lib/python/Components/Renderer/: Makefile.am  RunningText.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  VideoWizard.py
lib/python/Screens/: ImageBackup.py  Makefile.am  MountManager.py
main/: bsod.cpp
po/: es.po
