installdir = $(pkgdatadir)/lcd_skin

dist_install_DATA = analog_lcd.png \
 analog_lcd_blue.png \
 analog_lcd_blue_rec.png \
 analog_lcd_gb.png \
 analog_lcd_gb_rec.png \
 analog_lcd_rail.png \
 analog_lcd_rail_rec.png \
 analog_lcd_rec.png \
 analog_lcd_red.png \
 analog_lcd_red_rec.png \
 analog_lcd_white.png \
 clock_lcd_analog.xml \
 clock_lcd_analog_blue.xml \
 clock_lcd_analog_blue_prev.png \
 clock_lcd_analog_gb.xml \
 clock_lcd_analog_gb_prev.png \
 clock_lcd_analog_prev.png \
 clock_lcd_analog_rail.xml \
 clock_lcd_analog_rail_prev.png \
 clock_lcd_analog_red.xml \
 clock_lcd_analog_red_prev.png \
 clock_lcd_analog_white.xml \
 clock_lcd_analog_white_prev.png \
 clock_lcd_digital.xml \
 clock_lcd_digital_blue.xml \
 clock_lcd_digital_blue_large.xml \
 clock_lcd_digital_blue_large_prev.png \
 clock_lcd_digital_blue_prev.png \
 clock_lcd_digital_flipClock.xml \
 clock_lcd_digital_flipClock_bg.png \
 clock_lcd_digital_flipClock_prev.png \
 clock_lcd_digital_flipClock_rad.png \
 clock_lcd_digital_flipClock_split.png \
 clock_lcd_digital_prev.png \
 clock_lcd_digital_red.xml \
 clock_lcd_digital_red_large.xml \
 clock_lcd_digital_red_large_prev.png \
 clock_lcd_digital_red_prev.png \
 clock_lcd_digital_white.xml \
 clock_lcd_digital_white_large.xml \
 clock_lcd_digital_white_large_prev.png \
 clock_lcd_digital_white_prev.png \
 common.xml \
 noprev.png \
 skin_lcd_default.xml \
 skin_lcd_default_prev.png \
 skin_lcd_no_picon_1.xml \
 skin_lcd_no_picon_1_prev.png \
 skin_lcd_no_picon_2.xml \
 skin_lcd_no_picon_2_prev.png \
 skin_lcd_picon.xml \
 skin_lcd_picon_1.xml \
 skin_lcd_picon_1_prev.png \
 skin_lcd_picon_2.xml \
 skin_lcd_picon_2_prev.png \
 skin_lcd_picon_3.xml \
 skin_lcd_picon_3_prev.png \
 skin_lcd_picon_4.xml \
 skin_lcd_picon_4_prev.png \
 skin_lcd_picon_5.xml \
 skin_lcd_picon_5_prev.png \
 skin_lcd_picon_6.xml \
 skin_lcd_picon_6_prev.png \
 skin_lcd_picon_prev.png

